# Abacus

./: CMakeLists.txt  README.md
include/: AbacusScene.h  BonesItem.h  CalculatorWidget.h  MainWindow.h
res/: audio.qrc  texture.qrc
src/: AbacusScene.cpp  CalculatorWidget.cpp  MainWindow.cpp  main.cpp
